<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingBottom="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_post_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/avatar_post_detail"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/avatar"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewPostDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cardView_post_detail"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/follow_button"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="visible"
                android:text="@string/post_detail_delete_button_caption"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/post_detail_follow_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:text="@string/follow_button"
                style="?android:attr/buttonBarButtonStyle" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingBottom="12dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="14dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageViewPost"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/loading"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textViewMainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_main_content"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextComment"
                android:layout_width="124dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:textSize="16sp"
                android:hint="@string/add_a_comment" />

            <Button
                android:id="@+id/buttonComment"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/publish" />

            <Button
                android:id="@+id/buttonLike"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/post_detail_like_button_caption" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewComments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>