...
            android:text="Selected Location Name"
            android:id="@+id/locationNameTextView"
            android:textSize="18sp"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/createPostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create a Post" />

        <Button
            android:id="@+id/reviewPostsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Review Posts" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
...
